# takenoko

./: .gitignore  .pylintrc  AGENTS.md  README.md  install.bat  pyproject.toml  run_trainer.bat
configs/examples/: full_config_template.toml  wan21_dora.toml  wan21_lora.toml  wan21_lycoris.toml  wan21_relora.toml  wan21_slider.toml  wan22_dual_lora.toml  wan22_finetune_high_noise.toml  wan22_finetune_low_noise.toml  wan22_lora_high_noise.toml  wan22_lora_low_noise.toml
extensions/stochastic_rounding/: setup.py  stochastic_ops.cu
runpod/: takenoko.runpod  takenoko_multigpu.runpod  takenoko_multigpu_train.sh  takenoko_train.sh
src/: config_parser.py  repomix-output.xml  takenoko.py
src/caching/: cache_latents.py  cache_optical_flow.py  cache_semantic_embeddings.py  cache_sft_teacher_action.py  cache_sft_teacher_features.py  cache_text_encoder_outputs.py  chunk_estimator.py
src/common/: attention_logging.py  attention_metrics.py  constants.py  context_memory_manager.py  contrastive_flow_utils.py  dependencies.py  global_seed.py  logger.py  model_downloader.py  performance_logger.py  profiling.py  sai_model_spec.py  training_validators.py  vram_estimator.py
src/conditioning/: control_processor.py
src/configs/: adalora_config.py  badam_config.py  cdka_config.py  deco_band_balanced_loss_config.py  deco_frequency_diagnostics_config.py  delta_time_sampling_config.py  det_motion_transfer_config.py  diagnostic_metrics_config.py  drifting_config.py  dual_head_alignment_config.py  dype_config.py  euphonium_config.py  flex_config.py  flexam_config.py  flowc2s_config.py  frame_aware_history_corruption_config.py  glance_config.py  internal_guidance_config.py  isofm_config.py  lora_drop_config.py  lorweb_config.py  m2_repa_config.py  manifold_consensus_config.py  mhc_config.py  mixflow_config.py  mora_config.py  motion_disentanglement_config.py  neon_config.py  oftv2_config.py  (+31 more)
tools/: convert_model_precision.py  convert_singlora_to_lora.py  convert_vblora_to_lora.py  differential_lora.py  extract_config.py  generate_masks.py  verify_installation.py
(+472 files in other folders)
